...
            modifier = Modifier.testTag(DisplayedEventsTestTags.BUTTON_ALL))
      }
}

object DisplayedEventsTestTags {

  const val BUTTON_SUBSCRIBED = "BUTTON_SUBSCRIBED"
  const val BUTTON_ALL = "BUTTON_ALL"
}

@Composable
private fun FilterText(text: String, selected: Boolean, onClick: () -> Unit, modifier: Modifier) {
  Column(
      horizontalAlignment = Alignment.CenterHorizontally,
...
