package ch.epfllife.model.association

enum class AssociationImageType {
  LOGO,
  BANNER
}
